--- a/SidebarMenu/Base.lproj/Main.storyboard
+++ b/SidebarMenu/Base.lproj/Main.storyboard
@@ -718,14 +718,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="touch-id-icon" translatesAutoresizingMaskIntoConstraints="NO" id="aIM-WC-zRC">
-                                <rect key="frame" x="172" y="507.66666666666663" width="70" height="69.999999999999886"/>
+                                <rect key="frame" x="172" y="508" width="70" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="RSk-qa-QTc"/>
                                     <constraint firstAttribute="width" constant="70" id="tBh-Yo-84y"/>
                                 </constraints>
                             </imageView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jF5-Gx-B4j">
-                                <rect key="frame" x="167" y="501.66666666666663" width="80" height="79.999999999999886"/>
+                                <rect key="frame" x="167" y="502" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="NIv-oZ-S5B"/>
                                     <constraint firstAttribute="width" constant="80" id="Q3V-tW-97b"/>
@@ -742,10 +742,10 @@
                                 </constraints>
                             </activityIndicatorView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="nRR-wp-d3Y" userLabel="LoginStackView">
-                                <rect key="frame" x="57" y="248.66666666666669" width="300" height="239.00000000000006"/>
+                                <rect key="frame" x="57" y="249" width="300" height="239"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ITV-Be-oRW">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="51.000000000000028"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="51"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="UrP-PG-UIW"/>
                                             <constraint firstAttribute="width" constant="300" id="zLU-I7-uMc"/>
@@ -760,7 +760,7 @@
                                         </connections>
                                     </segmentedControl>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="PbZ-Qx-Z7Z" customClass="CustomTextField" customModule="MediCalTransport" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="53.000000000000028" width="300" height="60"/>
+                                        <rect key="frame" x="0.0" y="53" width="300" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="B1q-cV-wZy"/>
                                             <constraint firstAttribute="height" constant="60" id="Nj1-Dj-Jh3"/>
@@ -776,7 +776,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="swP-59-Epq" customClass="CustomTextField" customModule="MediCalTransport" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="116.00000000000003" width="300" height="60"/>
+                                        <rect key="frame" x="0.0" y="116" width="300" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="300" id="1Au-gX-vpW"/>
                                             <constraint firstAttribute="height" constant="60" id="J5Y-De-Twx"/>
@@ -792,7 +792,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xkb-aP-xLy">
-                                        <rect key="frame" x="0.0" y="179.00000000000003" width="300" height="60"/>
+                                        <rect key="frame" x="0.0" y="179" width="300" height="60"/>
                                         <color key="backgroundColor" red="0.27058823529999998" green="0.2666666667" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="W0r-D6-GDx"/>
@@ -1102,20 +1102,20 @@
                                     <action selector="goBackButtonTapped:" destination="dVL-gQ-THv" eventType="touchUpInside" id="SXG-lE-X7o"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dUn-RE-11b">
-                                <rect key="frame" x="282" y="686" width="120" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dUn-RE-11b">
+                                <rect key="frame" x="274" y="686" width="120" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="tvm-aG-eCe"/>
                                     <constraint firstAttribute="width" constant="120" id="yJU-Bl-VwY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <state key="normal" title="Pick Up Now"/>
+                                <state key="normal" title="Pick Up"/>
                                 <connections>
                                     <action selector="pickUpNowTapped:" destination="dVL-gQ-THv" eventType="touchUpInside" id="1PV-iU-NUO"/>
                                 </connections>
                             </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kwn-pZ-oD7">
-                                <rect key="frame" x="0.0" y="80" width="414" height="576"/>
+                                <rect key="frame" x="0.0" y="80" width="414" height="594"/>
                             </mapView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YwT-Ag-xWc">
                                 <rect key="frame" x="20" y="36" width="374" height="30"/>
@@ -1144,13 +1144,13 @@
                             <constraint firstItem="YwT-Ag-xWc" firstAttribute="leading" secondItem="ZhD-CM-wbn" secondAttribute="leadingMargin" id="02A-D6-sqs"/>
                             <constraint firstItem="Kwn-pZ-oD7" firstAttribute="centerX" secondItem="ZhD-CM-wbn" secondAttribute="centerX" id="3b6-zz-7tN"/>
                             <constraint firstItem="YwT-Ag-xWc" firstAttribute="trailing" secondItem="ZhD-CM-wbn" secondAttribute="trailingMargin" id="4Nt-7I-Xl2"/>
-                            <constraint firstAttribute="trailing" secondItem="dUn-RE-11b" secondAttribute="trailing" constant="12" id="5X3-Wa-ZC6"/>
+                            <constraint firstAttribute="trailing" secondItem="dUn-RE-11b" secondAttribute="trailing" constant="20" id="5X3-Wa-ZC6"/>
                             <constraint firstItem="Kwn-pZ-oD7" firstAttribute="top" secondItem="MeW-YR-s2O" secondAttribute="bottom" constant="60" id="6Ym-FO-Ef2"/>
                             <constraint firstItem="Kwn-pZ-oD7" firstAttribute="leading" secondItem="ZhD-CM-wbn" secondAttribute="leadingMargin" constant="-20" id="G1v-Bx-fAt"/>
                             <constraint firstItem="B5i-iT-kdD" firstAttribute="top" secondItem="VmQ-9a-0h7" secondAttribute="bottom" constant="20" id="HY5-Ky-0Nu"/>
                             <constraint firstItem="VmQ-9a-0h7" firstAttribute="leading" secondItem="ZhD-CM-wbn" secondAttribute="leadingMargin" id="Tum-ox-RXA"/>
                             <constraint firstItem="B5i-iT-kdD" firstAttribute="top" secondItem="dUn-RE-11b" secondAttribute="bottom" constant="20" id="e6h-MW-uGd"/>
-                            <constraint firstItem="Kwn-pZ-oD7" firstAttribute="centerY" secondItem="ZhD-CM-wbn" secondAttribute="centerY" id="fQf-26-Vcf"/>
+                            <constraint firstItem="Kwn-pZ-oD7" firstAttribute="centerY" secondItem="ZhD-CM-wbn" secondAttribute="centerY" constant="9" id="fQf-26-Vcf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Kwn-pZ-oD7" secondAttribute="trailing" constant="-20" id="gvg-kY-6na"/>
                             <constraint firstItem="Th3-7X-0Gf" firstAttribute="centerX" secondItem="ZhD-CM-wbn" secondAttribute="centerX" id="juB-dc-FhJ"/>
                             <constraint firstItem="YwT-Ag-xWc" firstAttribute="top" secondItem="MeW-YR-s2O" secondAttribute="bottom" constant="16" id="s9Z-GS-Der"/>
